--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
 <h2 id="t3"> Відгуки </h2>
 <article>
 <img src="https://learn.logikaschool.com/uploads/student/3531504/683c1f094181c.jpg"width=200 height="200"> 
-<p> Олена2015</p>
+<p> <b>Олена2015</b></p>
 <p>Мені дуже сподобалася китайська кухня  </p>
 
 <img src="https://learn.logikaschool.com/uploads/student/3531504/683c1f04e4d74.jpg"width=200 height="200"> 
-<p> Настя 12345</p>
+<p> <b>Настя 12345</b></p>
 <p> Все було дуже смачно ,але китайська кухня була дуже гостра  </p>
 
 <img src="https://learn.logikaschool.com/uploads/student/3531504/673097271d556.webp"width=200 height="200"> 
-<p> Мія love cat</p>
+<p> <b>Мія love cat</b></p>
 <p>Все було дуже смачно но дуже довго чекала заказ кошке все сподобалось як і мені</p>
 </article>
 
